# revtown

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.polecat  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  deploy.yml
apps/: __init__.py
apps/api/: __init__.py  config.py  dependencies.py  main.py
apps/api/core/: __init__.py  approval_store.py  bead_store.py  convoy_executor.py  convoy_store.py  deacon.py  mayor.py  neurometric.py  polecat_store.py  refinery.py  witness.py
apps/api/middleware/: __init__.py  error_handler.py
apps/api/models/: __init__.py  beads.py
apps/api/routers/: __init__.py  approval.py  auth.py  beads.py  billing.py  campaigns.py  mayor.py  neurometric.py  orgs.py  plugins.py  polecats.py  webhooks.py
apps/web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/web/src/: App.tsx  index.css
apps/web/src/components/: Layout.tsx
apps/web/src/pages/: DashboardPage.tsx
apps/web/src/pages/admin/: AdminPage.tsx
apps/web/src/pages/approve/: ApprovePage.tsx
apps/web/src/pages/campaigns/: CampaignsPage.tsx
apps/web/src/pages/mayor/: MayorPage.tsx
apps/web/src/pages/optimize/: OptimizePage.tsx
db/schema/: init.sql
infra/k8s/: api-deployment.yaml  configmap.yaml  deacon-deployment.yaml  ingress.yaml  kustomization.yaml  mayor-deployment.yaml  namespace.yaml  polecat-job-template.yaml  secret.example.yaml
infra/k8s/overlays/production/: hpa.yaml  kustomization.yaml
infra/k8s/overlays/staging/: kustomization.yaml
infra/temporal/: dynamic-config.yaml  workflows.py
infra/vault/: config.hcl
infra/vault/policies/: polecat.hcl  revtown-api.hcl
plugins/: __init__.py
plugins/examples/: __init__.py
plugins/examples/g2_monitor/: __init__.py  revtown-plugin.json
plugins/registry/: __init__.py  loader.py  manifest.py
polecats/: __init__.py  base.py  runner.py
rigs/: __init__.py
rigs/content_factory/: __init__.py  polecats.py
rigs/intelligence_station/: __init__.py  polecats.py
rigs/landing_pad/: __init__.py  polecats.py
rigs/press_room/: __init__.py  polecats.py
rigs/repo_watch/: __init__.py  polecats.py
rigs/sdr_hive/: __init__.py  polecats.py
rigs/social_command/: __init__.py  polecats.py
rigs/wire/: __init__.py  polecats.py
tests/: __init__.py  conftest.py
tests/e2e/: test_campaign_flow.py
tests/integration/: test_api.py  test_bead_store.py  test_neurometric.py
tests/unit/: test_beads.py  test_deacon.py  test_mayor.py  test_polecats.py  test_refinery.py  test_witness.py
